--- a/client/src/components/InputField/InputField.scss
+++ b/client/src/components/InputField/InputField.scss
@@ -10,32 +10,32 @@
   padding: 0 0.4rem;
   position: relative;
   overflow: hidden;
-}
 
-.input-field i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  transition: 0.5s;
-  font-size: 1.1rem;
-}
 
-.input-field input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #333;
-}
+  i {
+    text-align: center;
+    line-height: 55px;
+    color: #acacac;
+    transition: 0.5s;
+    font-size: 1.1rem;
+  }
 
-.input-field input::placeholder {
-  color: #aaa;
-  font-weight: 500;
-}
+  input {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1.1rem;
+    color: #333;
 
-.invalid-feedback {
+    &::placeholder {
+      color: #aaa;
+      font-weight: 500;
+    }
+  }
+}
+.invalid {
   max-width: 380px;
   width: 100%;
   font-weight: 600;
