--- a/client/src/components/InputField/InputField.scss
+++ b/client/src/components/InputField/InputField.scss
@@ -6,7 +6,7 @@
   height: 55px;
   border-radius: 55px;
   display: grid;
-  grid-template-columns: 15% 85%;
+  grid-template-columns: 15% 70% 15%;
   padding: 0 0.4rem;
   position: relative;
   overflow: hidden;
@@ -18,6 +18,9 @@
     color: #acacac;
     transition: 0.5s;
     font-size: 1.1rem;
+    &.show{
+      cursor: pointer;
+    }
   }
 
   input {
