--- a/client/src/components/Loading/Loading.scss
+++ b/client/src/components/Loading/Loading.scss
@@ -1,5 +1,9 @@
 .loading {
-  background: rgba(36, 36, 36, 0.8);
+  background: rgba(36, 36, 36, 0.5);
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
   &__preloader {
     position: fixed;
     top: 0;
@@ -7,7 +11,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: #000;
+    background: rgba(26, 24, 24, 0.8);
     &__inner {
       position: absolute;
       top: 50%;
@@ -15,13 +19,115 @@
       transform: translate(-50%, -50%);
 
       .classic-1 {
-        color: #e0eb1e;
+        text-align: center;
+        color: #cdd1ca;
         font-weight: bold;
         font-family: sans-serif;
         font-size: 40px;
-        animation:c1 1s linear infinite alternate;
+        animation: c1 1s linear infinite alternate;
+        margin-top: -1.5rem;
       }
-      @keyframes c1 {to{opacity: 0}}
+      @keyframes ldio-xfm30x8tkja-1 {
+        0% {
+          transform: rotate(0deg);
+        }
+        50% {
+          transform: rotate(-45deg);
+        }
+        100% {
+          transform: rotate(0deg);
+        }
+      }
+      @keyframes ldio-xfm30x8tkja-2 {
+        0% {
+          transform: rotate(180deg);
+        }
+        50% {
+          transform: rotate(225deg);
+        }
+        100% {
+          transform: rotate(180deg);
+        }
+      }
+      .ldio-xfm30x8tkja > div:nth-child(2) {
+        transform: translate(-15px, 0);
+      }
+      .ldio-xfm30x8tkja > div:nth-child(2) div {
+        position: absolute;
+        top: 40px;
+        left: 40px;
+        width: 140px;
+        height: 70px;
+        border-radius: 140px 140px 0 0;
+        background: #fdd039;
+        animation: ldio-xfm30x8tkja-1 1.1764705882352942s linear infinite;
+        transform-origin: 70px 70px;
+      }
+      .ldio-xfm30x8tkja > div:nth-child(2) div:nth-child(2) {
+        animation: ldio-xfm30x8tkja-2 1.1764705882352942s linear infinite;
+      }
+      .ldio-xfm30x8tkja > div:nth-child(2) div:nth-child(3) {
+        transform: rotate(-90deg);
+        animation: none;
+      }
+      @keyframes ldio-xfm30x8tkja-3 {
+        0% {
+          transform: translate(190px, 0);
+          opacity: 0;
+        }
+        20% {
+          opacity: 1;
+        }
+        100% {
+          transform: translate(70px, 0);
+          opacity: 1;
+        }
+      }
+      .ldio-xfm30x8tkja > div:nth-child(1) {
+        display: block;
+      }
+      .ldio-xfm30x8tkja > div:nth-child(1) div {
+        position: absolute;
+        top: 96px;
+        left: -8px;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #ad4b0e;
+        animation: ldio-xfm30x8tkja-3 1.1764705882352942s linear infinite;
+      }
+      .ldio-xfm30x8tkja > div:nth-child(1) div:nth-child(1) {
+        animation-delay: -0.5695s;
+      }
+      .ldio-xfm30x8tkja > div:nth-child(1) div:nth-child(2) {
+        animation-delay: -0.2805s;
+      }
+      .ldio-xfm30x8tkja > div:nth-child(1) div:nth-child(3) {
+        animation-delay: 0s;
+      }
+      .loadingio-spinner-bean-eater-ouf5226ph8c {
+        width: 200px;
+        height: 200px;
+        display: inline-block;
+        overflow: hidden;
+        background: rgba(255, 255, 255, 0);
+      }
+      .ldio-xfm30x8tkja {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        transform: translateZ(0) scale(1);
+        backface-visibility: hidden;
+        transform-origin: 0 0; /* see note above */
+      }
+      .ldio-xfm30x8tkja div {
+        box-sizing: content-box;
+      }
+      @keyframes c1 {
+        to {
+          opacity: 0;
+        }
+      }
     }
   }
 }
